# rust-actix-web-api-template

./: .gitignore  Cargo.toml  README.md  curltest.sh  rundev.sh
src/: main.rs  redirect.rs
static/: auth.html  index.html
