[package]
name = "actix-blank-web-api"
version = "0.1.0"
authors = ["GregP <glp@swimr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://actix.rs/docs/getting-started/
actix-web = "2.0"
# actix-rt = "1.1.1"

