[package]
name = "actix-blank-web-api"
version = "0.1.0"
authors = ["GregP <glp@swimr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://actix.rs/docs/getting-started/
actix-web = "2.0"
actix-rt = "1.1.1"
actix-files = "0.2.1"
serde = "1.0.115"

# middleware
# https://github.com/actix/examples/blob/master/middleware/Cargo.toml
actix-service = "1.0.6"
futures = "0.3.1"
pin-project = "0.4.6"

# logging middleware
log = "0.4.0"
env_logger = "0.7.1"
